# 41Swara-tool

./: .gitignore  41swara-scan.sh  API_ARCHITECTURE.md  ARCHITECTURE.md  CHANGES.md  Cargo.toml  IMPROVEMENTS.md  LegacyContract.sol  Makefile  PRESENTATION_GUIDE.md  README.md  REKT_NEWS_PATTERNS.md  SECURITY_RESEARCHER_GUIDE.md  SOLIDITY_VERSION_VULNERABILITIES.md  TestContract08.sol  scan.sh
.github/workflows/: ci.yml
examples/: 41swara.toml
man/: 41.1
scripts/: install-man.sh
src/: abi_scanner.rs  advanced_analysis.rs  attack_path.rs  cache.rs  config.rs  cvss.rs  dependency_analyzer.rs  eip_analyzer.rs  exploit_db.rs  false_positive_filter.rs  logic_analyzer.rs  main.rs  parser.rs  professional_reporter.rs  project_scanner.rs  reachability_analyzer.rs  reporter.rs  sarif.rs  sarif_report.rs  scanner.rs  threat_model.rs  vulnerabilities.rs
src/ast/: bridge.rs  cfg.rs  dataflow.rs  mod.rs  parser.rs
src/defi/: amm_analyzer.rs  lending_analyzer.rs  mev_analyzer.rs  mod.rs  oracle_analyzer.rs
src/integrations/: foundry.rs  mod.rs  slither.rs
test_contracts/: ComprehensiveTest.sol  FalseNegativeTest.sol  Ownable.sol  RektNewsPatterns.sol  TestAdvanced.sol  TestContract.abi.json  Token.sol  Vault.sol  test_2025_exploits.sol  test_2026_exploits.sol
test_versions/: v0_4_26.sol  v0_8_15.sol  v0_8_19.sol  v0_8_27.sol  v0_8_29.sol  v0_8_30.sol
tests/: integration_tests.rs
tests/contracts/access_control/: ownable_safe.sol  unprotected_admin.sol
tests/contracts/defi/: vulnerable_vault.sol
tests/contracts/false_positives/: fp_ownable_functions.sol  fp_reentrancy_guard.sol  fp_safemath_0_8.sol  fp_transfer_2300_gas.sol  fp_view_functions.sol  safe_erc20_usage.sol
tests/contracts/reentrancy/: classic_reentrancy.sol  safe_reentrancy.sol
tests/contracts/v07_exploits/: cross_chain_unvalidated.sol  multicall_msg_value.sol
