[package]
name = "solidity_scanner"
version = "0.1.0"
edition = "2021"
description = "A Rust-based smart contract vulnerability scanner"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
regex = "1.7"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
