[package]
name = "solidity_scanner"
version = "0.6.0"
edition = "2021"
description = "High-performance smart contract vulnerability scanner for Ethereum Foundation and blockchain security researchers"
authors = ["41Swara Security Team"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/41swara/smart-contract-scanner"
repository = "https://github.com/41swara/smart-contract-scanner"
keywords = ["solidity", "security", "smart-contracts", "blockchain", "audit"]
categories = ["development-tools", "command-line-utilities"]

# Main binary - run with: 41swara
[[bin]]
name = "41swara"
path = "src/main.rs"

# Short alias - run with: 41
[[bin]]
name = "41"
path = "src/main.rs"

[dependencies]
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Performance improvements
rayon = "1.8"                 # Parallel file scanning (4-10x speedup)
once_cell = "1.19"            # Lazy static regex compilation for better performance

# Git integration
git2 = "0.18"                 # Git diff mode for incremental scanning

# File watching
notify = "6.1"                # Watch mode for continuous scanning

# AST-based analysis (Phase 1)
tree-sitter = "0.20"          # Incremental parsing framework
petgraph = "0.6"              # Graph data structures for CFG

# Performance & caching (Phase 4)
blake3 = "1.5"                # Fast hashing for file cache
dashmap = "5.5"               # Concurrent hashmap for parallel scanning
indicatif = "0.17"            # Progress bars for large scans

# UUID generation for findings
uuid = { version = "1.6", features = ["v4"] }

# Glob pattern matching for file exclusion
glob = "0.3"

[profile.release]
lto = true                    # Link-time optimization
codegen-units = 1             # Better optimization
strip = true                  # Smaller binary
